@@ -33,6 +33,7 @@ Release 0.9.10
 - pageStats: add option to display SQL queries and time used
 - create setting 'isShowCategoryCount' that defaults to false...
 - limit ZMProducts::getNewProducts() to (3 * $max) or 50 (if $max == 0)
+- simplify generated search SQL if no categories are involved
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
